# playwright-pool

./: README.md  pyproject.toml
playwright_pool/: __init__.py  pool.py
tests/: pool.py
